--- a/notatka/app/src/main/res/values/strings.xml
+++ b/notatka/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">notatka</string>
-    <string name="test_body">HOUHOHOUHOHUOHUOHU</string>
+
+    <string name="editor_name">editor</string>
     <string name="title">Title</string>
     <string name="body">Put your body here, babe</string>
 </resources>
