--- a/notatka/app/src/main/res/values/strings.xml
+++ b/notatka/app/src/main/res/values/strings.xml
@@ -2,6 +2,12 @@
     <string name="app_name">notatka</string>
 
     <string name="editor_name">editor</string>
+
     <string name="title">Title</string>
     <string name="body">Put your body here, babe</string>
+
+    <string name="action_save">save</string>
+    <string name="action_delete">delete</string>
+    <string name="action_insert_dummy_data">put dummy data</string>
+    <string name="action_delete_all_entries">delete all notes</string>
 </resources>
